--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Rating.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Rating.cshtml
@@ -4,20 +4,28 @@
 
 @{
     var list = Model.Parent;
+    string reviewTitle = string.Empty;
+    string srText = string.Empty;
     int ratingPercent = 0;
+    int rating = 0;
+
     if (Model.TotalReviews != 0)
     {
         ratingPercent = ((Model.RatingSum * 100) / Model.TotalReviews) / 5;
-    }
-
-    string reviewTitle = string.Empty;
-    if (Model.TotalReviews > 0)
-    {
+        rating = Model.RatingSum / Model.TotalReviews;
         reviewTitle = $"{Model.TotalReviews} {(Model.TotalReviews == 1 ? T("Reviews.Overview.Review") : T("Reviews.Overview.Reviews"))}";
+        srText = T("Aria.Label.Rating", rating, reviewTitle);
+    }
+    else
+    {
+        reviewTitle = T("Reviews.Overview.NoReviews");
+        srText = reviewTitle;
     }
 }
 
-<div class="art-rating" title="@reviewTitle">
+<p class="sr-only">@srText</p>
+
+<div class="art-rating" title="@reviewTitle" aria-hidden="true">
     <div class="rating">
         <div style="width: @(ratingPercent)%"></div>
     </div>
