--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Variants.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Variants.cshtml
@@ -7,11 +7,11 @@
 }
 
 <div class="art-variant-info">
-    <div sm-if="Model.ColorAttributes != null && Model.ColorAttributes.Any()" class="art-color-opts">
+    <div sm-if="Model.ColorAttributes != null && Model.ColorAttributes.Any()" class="art-color-opts" role="listbox" aria-orientation="horizontal">
         @foreach (var clr in Model.ColorAttributes)
         {
-            <a href="@clr.ProductUrl" class="art-color-opt" style="background-color: @clr.Color" 
-                title="@T("Products.ChooseColorX", clr.FriendlyName, clr.AttributeName)"></a>
+            var title = T("Products.ChooseColorX", clr.FriendlyName, clr.AttributeName);
+            <a href="@clr.ProductUrl" class="art-color-opt" style="background-color: @clr.Color" role="option" aria-label="@title" title="@title"></a>
         }
     </div>
     <div sm-if="Model.Attributes.Any()" class="art-more-opts">
