--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cookie-manager.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cookie-manager.scss
@@ -14,7 +14,12 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     color: var(--body-color);
-    font-weight: 600 !important;
+    font-size: 1rem;
+    font-weight: $font-weight-medium !important;
+    padding-inline-start: 0.75rem;
+    margin: 0;
+    margin-inline-start: 0.5rem;
+    border-radius: 4px;
 
     > .collapse-chevron {
         transition: transform 0.35s;
