--- a/src/Smartstore.Web/Views/Shared/Components/Menu/Navbar.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Menu/Navbar.cshtml
@@ -47,7 +47,7 @@
 
 <div class="cms-menu cms-menu-navbar" data-menu-name="@(Model.Name?.ToLower())">
     <div class="megamenu-nav megamenu-nav--prev @(rtl ? "omega" : "alpha")">
-        <a href="#" class="megamenu-nav-btn btn btn-clear-dark btn-icon rounded-circle">
+        <a href="#" class="megamenu-nav-btn btn btn-clear-dark btn-icon btn-sm" aria-hidden="true">
             <i class="far fa-chevron-left megamenu-nav-btn-icon"></i>
         </a>
     </div>
@@ -140,7 +140,7 @@
     </ul>
 
     <div class="megamenu-nav megamenu-nav--next @(rtl ? "alpha" : "omega")">
-        <a href="#" class="megamenu-nav-btn btn btn-clear-dark btn-icon rounded-circle">
+        <a href="#" class="megamenu-nav-btn btn btn-clear-dark btn-icon btn-sm" aria-hidden="true">
             <i class="far fa-chevron-right megamenu-nav-btn-icon"></i>
         </a>
     </div>
