--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Buttons.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Buttons.cshtml
@@ -12,7 +12,7 @@
 
     void RenderBuyButton(bool blockStyle)
     {
-        var cssClasses = blockStyle ? "btn-block d-none d-md-block" : "btn-lg art-btn col";
+        var cssClasses = blockStyle ? "btn-block d-none d-md-block" : "btn-lg art-btn focus-inset col";
         if (!blockStyle && isLinesMode)
         {
             cssClasses += " d-md-none";
@@ -82,7 +82,7 @@
     {
         var wishlistTitle = T("Categories.Wishlist");
         <button data-href='@Url.Action("AddProductSimple", "ShoppingCart", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist , area = "" })'
-           class="btn btn-secondary btn-lg art-btn col ajax-cart-link add-to-wishlist-button" 
+           class="btn btn-secondary btn-lg art-btn col ajax-cart-link add-to-wishlist-button focus-inset" 
            type="button"
            aria-label="@wishlistTitle - @Model.Name"
            title="@wishlistTitle"
@@ -100,7 +100,7 @@
     {
         var compareTitle = T("Categories.Compare");
         <button data-href="@Url.Action("AddProductToCompare", "Catalog", new { id = Model.Id, area = "" })"
-                class="btn btn-secondary btn-lg art-btn col ajax-cart-link add-to-compare-list-button"
+                class="btn btn-secondary btn-lg art-btn col ajax-cart-link add-to-compare-list-button focus-inset"
                 type="button"
                 aria-label="@compareTitle - @Model.Name"
                 title="@compareTitle" 
@@ -115,7 +115,7 @@
     }
 
     <a href='@Model.DetailUrl'
-       class="btn btn-secondary btn-lg art-btn col product-details-button"
+       class="btn btn-secondary btn-lg art-btn col product-details-button focus-inset"
        title="@detailsTitle"
        aria-label="@detailsTitle - @Model.Name"
        data-toggle="tooltip" data-placement="bottom">
