--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.ViewMode.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.ViewMode.cshtml
@@ -4,26 +4,25 @@
 
 @{
     var isGrid = Model.ViewMode == ProductSummaryViewMode.Grid;
+    var resSwitchToGrid = T("Products.SwitchToGrid");
+    var resSwitchToList = T("Products.SwitchToList");
 }
 
 <div class="artlist-action artlist-action--viewmode">
-    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-        <a href='@Display.ModifyQueryString(null, "?v=grid")'
-            class="btn btn-secondary btn-icon btn-artlist-action tooltip-toggle" 
-            attr-class='(isGrid, "active")' data-toggle="tooltip" 
-            rel="nofollow" 
-            title="@T("Products.SwitchToGrid")">
-            <input type="radio" name="artlist-viewmode" id="artlist-viewmode-grid" attr-checked='(isGrid, "checked")' />
-            <i class="fa fa-grip"></i>
+    <div class="btn-group btn-group-toggle" data-toggle="buttons" role="radiogroup" aria-label="Ansicht wählen">
+        <a href='@Display.ModifyQueryString(null, "?v=grid")' rel="nofollow" 
+            class="btn btn-secondary btn-icon btn-artlist-action tooltip-toggle" attr-class='(isGrid, "active")' 
+            title="@resSwitchToGrid" data-toggle="tooltip"
+            role="radio" aria-checked="@(isGrid ? "true" : "false")" aria-label="@resSwitchToGrid">
+            <input type="radio" name="artlist-viewmode" id="artlist-viewmode-grid" attr-checked='(isGrid, "checked")' aria-hidden="true" tabindex="-1" />
+            <i class="fa fa-grip" aria-hidden="true"></i>
         </a>
-        <a href='@Display.ModifyQueryString(null, "?v=list")'
-            class="btn btn-secondary btn-icon btn-artlist-action tooltip-toggle"
-            attr-class='(!isGrid, "active")' 
-            data-toggle="tooltip"
-            rel="nofollow" 
-            title="@T("Products.SwitchToList")">
-            <input type="radio" name="artlist-viewmode" id="artlist-viewmode-list" attr-checked='(!isGrid, "checked")' />
-            <i class="fa fa-list"></i>
+        <a href='@Display.ModifyQueryString(null, "?v=list")' rel="nofollow" 
+            class="btn btn-secondary btn-icon btn-artlist-action tooltip-toggle" attr-class='(!isGrid, "active")' 
+            title="@resSwitchToList" data-toggle="tooltip"
+            role="radio" aria-checked="@(!isGrid ? "true" : "false")" aria-label="@resSwitchToList">
+            <input type="radio" name="artlist-viewmode" id="artlist-viewmode-list" attr-checked='(!isGrid, "checked")' aria-hidden="true" tabindex="-1" />
+            <i class="fa fa-list" aria-hidden="true"></i>
         </a>
     </div>
 </div>
