--- a/src/Smartstore.Web/wwwroot/shared/_buttons.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_buttons.scss
@@ -14,6 +14,8 @@ button:where(.reset) {
     background-color: transparent;
     border: none;
     text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
 
